<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_new_identity"
        android:icon="@drawable/ic_action_new_identity"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_new_identity"/>
    <item
        android:id="@+id/action_delete_identity"
        android:icon="@drawable/ic_action_delete_identity"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/action_delete_identity"/>
    <item
        android:id="@+id/action_rename_identity"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_rename_identity"/>
    <item
        android:id="@+id/action_change_password"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/action_change_password"/>
    <item
        android:id="@+id/action_export_identity"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/action_export_identity"/>
    <item
        android:id="@+id/action_import_identity"
        android:orderInCategory="600"
        android:showAsAction="never"
        android:title="@string/action_import_identity"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="700"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="800"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>